# Test_task

./: .gitignore  LICENSE  README.md  RUN TESTS.sh  pyproject.toml
allure-report/: categories.json
allure-report_tested_once/: 00304eb5-7056-4a06-a4cf-f88dd9d13f25-result.json  009d49a2-d957-449e-8bfc-c5c5b98a034c-container.json  00db411b-0de2-4e10-86f4-1856a019264d-container.json  00fed1cb-be55-407c-b20b-41694830547e-result.json  0150f260-5310-4691-8034-e751d4020071-container.json  01c9105f-8fa2-4719-944c-d1da24e75327-result.json  01ed434b-de8f-48b5-8b19-a341d16ce6e4-result.json  01feadab-25cf-419e-873b-e86b705393dd-result.json  02dd6e96-1524-45f6-a915-37bffa60fee6-container.json  02e89680-2afc-40aa-99b4-e91b6e7170f8-result.json  030cc8d1-7721-4104-b533-7e394ddced9d-container.json  034639e2-f534-42a8-a0ea-93548482031b-result.json  03569151-5ca3-4dae-bcb1-c6ed26c4a9f2-result.json  0369372f-5018-4e5a-a09f-9aec4ac3c003-container.json  0369b312-b8c0-4df8-81ec-4e3ea9679873-container.json  0383b485-b980-4949-87a3-55e9c7eea264-container.json  038b38d6-9015-4e1f-bd7d-4451e8136b62-result.json  039885bf-e803-495f-b785-0b675a290a0b-result.json  03a8748b-0d5c-416c-8f56-4ba21e3d39ff-container.json  03aed714-e28a-46ad-ac56-1f0e682de5f0-container.json  03d17f3d-51ef-4ff8-9152-33700f171163-container.json  041bc197-bd68-41e2-b444-776ac621fe19-result.json  044613e9-784c-4d8e-bf65-1f86b30aad70-result.json  04558c6e-fc0b-4967-8bf6-79ba408e321f-container.json  05af5083-2081-4b60-b6d6-a4ebdde446a8-container.json  05b5f85a-508f-4e78-8f3b-ec4510db7369-container.json  (+1165 more)
model/: Appliccation.py  (+2 more)
(+2376 files in other folders)
